<resources>
    <string name="app_name">CyberJur</string>
    <string name="enter">Вход</string>
    <string name="loginOrEmail">Почта или логин</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="eljur">Электронный журнал</string>
    <string name="greetings">Привет, %name%</string>
    <string name="test_notify">Тест уведомлений</string>
    <string name="test_modal">Тест модалки</string>
    <string name="home">Главная</string>
    <string name="diary">Дневник</string>
    <string name="calendar">Календарь</string>
    <string name="materials">Материалы</string>
    <string name="school">Школа</string>
    <string name="shop">Магазин</string>
    <string name="game">CyberCards</string>
    <string name="ai">ИИ</string>
    <string name="settings">Настройки</string>
    <string name="news">Новости</string>
    <string name="widgets">Виджеты</string>
</resources>