<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home"
            android:title="@string/home"/>

    <item
            android:id="@+id/navigation_diary"
            android:icon="@drawable/diary"
            android:title="@string/diary"/>

    <item
            android:id="@+id/navigation_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/calendar"/>

    <item
            android:id="@+id/navigation_materials"
            android:icon="@drawable/materials"
            android:title="@string/materials"/>

    <item
            android:id="@+id/navigation_school"
            android:icon="@drawable/school"
            android:title="@string/school"/>

    <item
            android:id="@+id/navigation_shop"
            android:icon="@drawable/shop"
            android:title="@string/shop"/>

    <item
            android:id="@+id/navigation_games"
            android:icon="@drawable/game"
            android:title="@string/game"/>

    <item
            android:id="@+id/navigation_ai"
            android:icon="@drawable/ai"
            android:title="@string/ai"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"/>

</menu>