<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="ru.egmohf.cyberjur.ui.fragments.HomeFragment"
            android:label="@string/home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_diary"
            android:name="ru.egmohf.cyberjur.ui.fragments.DiaryFragment"
            android:label="@string/diary"
            tools:layout="@layout/fragment_diary"/>

    <fragment
            android:id="@+id/navigation_calendar"
            android:name="ru.egmohf.cyberjur.ui.fragments.CalendarFragment"
            android:label="@string/calendar"
            tools:layout="@layout/fragment_calendar"/>

    <fragment
            android:id="@+id/navigation_materials"
            android:name="ru.egmohf.cyberjur.ui.fragments.MaterialsFragment"
            android:label="@string/materials"
            tools:layout="@layout/fragment_materials"/>

    <fragment
            android:id="@+id/navigation_school"
            android:name="ru.egmohf.cyberjur.ui.fragments.SchoolFragment"
            android:label="@string/school"
            tools:layout="@layout/fragment_school"/>

    <fragment
            android:id="@+id/navigation_shop"
            android:name="ru.egmohf.cyberjur.ui.fragments.ShopFragment"
            android:label="@string/shop"
            tools:layout="@layout/fragment_shop"/>

    <fragment
            android:id="@+id/navigation_games"
            android:name="ru.egmohf.cyberjur.ui.fragments.GamesFragment"
            android:label="@string/materials"
            tools:layout="@layout/fragment_games"/>

    <fragment
            android:id="@+id/navigation_ai"
            android:name="ru.egmohf.cyberjur.ui.fragments.AiFragment"
            android:label="@string/school"
            tools:layout="@layout/fragment_ai"/>

    <fragment
            android:id="@+id/navigation_settings"
            android:name="ru.egmohf.cyberjur.ui.fragments.SettingsFragment"
            android:label="@string/shop"
            tools:layout="@layout/fragment_settings"/>
</navigation>